[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Sprites/farnerjimshaded1.png" type="Texture" id=2]
[ext_resource path="res://Player/Sprites/farnerjimshaded2.png" type="Texture" id=3]
[ext_resource path="res://Player/Sprites/crosshair2.png" type="Texture" id=4]
[ext_resource path="res://Player/Sounds/mud_steps 3.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104.623, 104.316 )

[sub_resource type="Animation" id=4]
resource_name = "anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.5, 0.5 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 69.2881

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimPlayer" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.88782, 12.2704 )
shape = SubResource( 2 )

[node name="Cross" type="Node2D" parent="."]

[node name="CrossSprite" type="Sprite" parent="Cross"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 200, -2.27374e-12 )
rotation = -3.14159
scale = Vector2( 0.52888, 0.52888 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CrossAnim" type="AnimationPlayer" parent="Cross/CrossSprite"]
anims/anim = SubResource( 4 )

[node name="CrossArea" type="Area2D" parent="Cross" groups=[
"select",
]]
position = Vector2( 200, -2.27374e-12 )
rotation = -3.14159
scale = Vector2( 0.461839, 0.461839 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cross/CrossArea"]
shape = SubResource( 3 )

[node name="Tool" type="Position2D" parent="."]
position = Vector2( 144, 0 )

[node name="MuddySteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
